@startuml
class dialogs.ProfileImageDialog {
- {static} String ARG_HAS_IMAGE
- boolean hasImage
- ImagePickerListener listener
+ void setData(boolean,ImagePickerListener)
+ void onCreate(Bundle)
# int getLayoutResId()
# void setupViews(Dialog)
}


interface dialogs.ProfileImageDialog$ImagePickerListener {
~ void onCamera()
~ void onGallery()
~ void onDelete()
}

class dialogs.UserDialog {
- {static} String ARG_USER
~ Validator validator
~ CalendarUtil calendarUtil
- User user
- String birthDate
- UserDialogListener listener
+ void setData(User,UserDialogListener)
+ void onCreate(Bundle)
# int getLayoutResId()
# void setupViews(Dialog)
- boolean areAllFieldsValid(String,String,String,String,EditText,EditText,EditText,EditText,EditText)
}


interface dialogs.UserDialog$UserDialogListener {
~ void onSubmit(User)
}

class dialogs.MedicationDialog {
- {static} String ARG_MEDICATION
- ArrayList<String> selectedHours
- ChipGroup chipGroupSelectedHours
- Medication medToEdit
- OnMedicationSubmitListener listener
+ void setData(Medication,OnMedicationSubmitListener)
+ void onCreate(Bundle)
# int getLayoutResId()
# void setupViews(Dialog)
- boolean validateInputs(String,String,String,Medication.MedicationType)
- Medication.MedicationType getTypeFromString(String)
- void showHourPicker()
- void updateSelectedHoursChips()
- ArrayAdapter<String> createMedicationTypeAdapter(List<String>)
- void styleTextView(TextView,boolean)
- void showToast(String)
}


interface dialogs.MedicationDialog$OnMedicationSubmitListener {
~ void onMedicationSubmit(Medication)
}



bases.BaseDialog <|-- dialogs.ProfileImageDialog
dialogs.ProfileImageDialog +.. dialogs.ProfileImageDialog$ImagePickerListener
bases.BaseDialog <|-- dialogs.UserDialog
dialogs.UserDialog +.. dialogs.UserDialog$UserDialogListener
bases.BaseDialog <|-- dialogs.MedicationDialog
dialogs.MedicationDialog +.. dialogs.MedicationDialog$OnMedicationSubmitListener
@enduml